# sw-core

./: .gitignore  Makefile  README.md  pyproject.toml
src/: main.py  main_v_2.py  send_email_2.py
src/alembic/: env.py
src/app/: database.py  settings.py
src/app/services/: app_decorators.py  common_service.py  logger.py
src/check_resources/: models.py
